--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,13 +1,14 @@
 <resources>
     <string name="app_name">wan android compose</string>
     <string name="a11y_bottom_navigation_bar">Bottom navigation bar with Having actions </string>
-    <string name="navigation_item_home">首页 </string>
-    <string name="navigation_item_widgets">项目</string>
-    <string name="navigation_item_animation">广场</string>
-    <string name="navigation_item_demoui">公众号</string>
-    <string name="navigation_item_profile">我的</string>
-    <string name="cd_dark_theme">黑暗主题</string>
 
+    <string name="navigation_item_home">首页 </string>
+    <string name="navigation_item_project">项目</string>
+    <string name="navigation_item_square">广场</string>
+    <string name="navigation_item_public_num">公众号</string>
+    <string name="navigation_item_profile">我的</string>
+
+    <string name="cd_dark_theme">黑暗主题</string>
     <string name="cd_change_color">变更主题色</string>
 
 </resources>
