收藏列表UI处理

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">wan android compose</string>
+    <string name="app_name">WanAndroid</string>
     <string name="a11y_bottom_navigation_bar">Bottom navigation bar with Having actions </string>
 
     <string name="navigation_item_home">首页 </string>
