--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,5 +10,6 @@
 
     <string name="cd_dark_theme">黑暗主题</string>
     <string name="cd_change_color">变更主题色</string>
+    <string name="register">注册</string>
 
 </resources>
